//--- Header ---
syntax = "proto3";

import "google/protobuf/any.proto";

//--- Example messages ---
message RequestVersion {
    //
}

message ResponseVersion {
    int32 version = 1;
}

//--- Displayd messages ---
message RequestStopSpinner {
    //
}

message ResponseStopSpinner {
    bool status = 1;
}

message RequestNewFrame {
    //
}

message ResponseNewFrame {
    bool status = 1;
}

//--- Footer ---
message MessageOuter {
    google.protobuf.Any inner = 2;
}

